<resources>
    <string name="app_name">THREAD</string>
    <string name="app_tag">And Trend</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="colors">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string name="title_activity_wishlist">Wishlist</string>
    <string name="vertical_elipsis">&#8942;</string>
    <string name="test_details">
        Item id: 21hh32\n
        Size available: one-size\n
        Material: Burlap\n
        Color: AliceBlue\n
        Neckline: V-neck\n
        Items: pullover\n
        Types: Regular-fit\n
        Length(cm): 23cm\n
        Styles: school\n
        Bust(cm): 102cm\n
        Patern: Stripped
    </string>

    <string name="rating">4.8</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_category">Categories</string>
    <string name="drawer_cat_men">Men</string>
    <string name="drawer_cat_women">Women</string>
    <string name="drawer_cat_kids">Kids</string>
    <string name="drawer_shops">Shops</string>
    <string name="drawer_designers">Designers</string>
    <string name="trending">Trending</string>

    <string name="fa_chevron_right">&#xf054;</string>
    <string name="dri_chvron">V</string>
    <string name="d_shop">&#xe047;</string>
    <string name="d_home">&#xe006;</string>
    <string name="d_cat">&#xe04c;</string>
    <string name="d_cat_list">&#xe043;</string>
    <string name="d_setting">~</string>

    <string name="toolbal_cart">Q</string>
    <string name="hello_blank_fragment">HNetwork error</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_account">Account</string>

    <string name="pref_title_share_locatiom">Enable Location Sharing recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for better delivery services</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_helpSupport">Help &amp; Support</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Example settings for Licenses -->
    <string name="pref_header_licenses">Licenses</string>

    <!-- Example settings for About -->
    <string name="pref_header_about">About</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>
</resources>
