<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.steve.clothing3.activity.SettingsActivity$AccountPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_account" />

    <header
        android:fragment="com.example.steve.clothing3.activity.SettingsActivity$HelpSupportPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_helpSupport" />

    <header
        android:fragment="com.example.steve.clothing3.activity.SettingsActivity$LicenseFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_licenses" />

    <header
        android:fragment="com.example.steve.clothing3.activity.SettingsActivity$AboutPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_about" />

</preference-headers>
