<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/navigation_drawer_width"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/drawer_margin"
    android:clickable="true"
    app:cardBackgroundColor="@color/drawer_item_color"
    app:cardElevation="0dp"
    app:cardMaxElevation="0dp"
    app:cardUseCompatPadding="true"
    app:layout_collapseParallaxMultiplier="0.0">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/exp_expand_button"
            android:layout_width="320dp"
            android:layout_height="@dimen/drawer_item_height"
            android:clickable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cat_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    style="?icon_font_bold" />

                <TextView
                    android:id="@+id/cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/drawer_margin"
                    android:layout_toEndOf="@id/cat_img"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/draw_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="40dp"
                    android:text="x"
                    android:textAlignment="center" />
            </RelativeLayout>


        </RelativeLayout>

        <net.cachapa.expandablelayout.ExpandableLayout
            android:id="@+id/exp_expand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/exp_expand_button"
            app:el_duration="800"
            app:el_expanded="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/drawer_margin_expand">

                <RelativeLayout
                    android:id="@+id/men_button"
                    android:layout_width="320dp"
                    android:layout_height="@dimen/drawer_item_height"
                    android:clickable="true"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/men_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"
                            android:layout_centerVertical="true"/>

                        <TextView
                            android:id="@+id/men"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="@dimen/drawer_margin"
                            android:layout_toEndOf="@id/men_img"
                            android:text="TextView"
                            tools:text="@string/drawer_cat_men" />
                    </RelativeLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/women_button"
                    android:layout_width="320dp"
                    android:layout_height="@dimen/drawer_item_height"
                    android:layout_below="@id/men_button"
                    android:clickable="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/women_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"
                            android:layout_centerVertical="true"/>

                        <TextView
                            android:id="@+id/women"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="@dimen/drawer_margin"
                            android:layout_toEndOf="@id/women_img"
                            android:text="TextView"
                            tools:text="@string/drawer_cat_women" />
                    </RelativeLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/kids_button"
                    android:layout_width="320dp"
                    android:layout_height="@dimen/drawer_item_height"
                    android:layout_below="@id/women_button"
                    android:clickable="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/kids_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:textStyle="bold"
                            android:layout_centerVertical="true"/>

                        <TextView
                            android:id="@+id/kids"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="@dimen/drawer_margin"
                            android:layout_toEndOf="@id/kids_img"
                            android:text="TextView"
                            tools:text="@string/drawer_cat_kids" />
                    </RelativeLayout>


                </RelativeLayout>
            </RelativeLayout>
        </net.cachapa.expandablelayout.ExpandableLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>